Made row div visible for new records too. Fixed selected attribute for select lists. Made the base selected when adding a new invoice and only one base exists.
git-svn-id: https://vllasku.svn.sourceforge.net/svnroot/vllasku/trunk@188 893e5d92-dae6-4f76-a1ff-a647e29d1ad7

--- a/css/style.css
+++ b/css/style.css
@@ -526,6 +526,10 @@ img.image {
   max-height: 250px;
 }
 
+.new_message {
+  margin: 20px;
+}
+
 /* jQuery UI overrides */
 .ui-widget .ui-widget {
   font-size: 12px;
@@ -547,3 +551,4 @@ img.image {
 .ui-state-default {
   color: #222222;
 }
+
